<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.bookDetail.BookDetailFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e9ecef"
        android:elevation="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="25dp"
                android:textColor="@color/dark_gray"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#e9ecef"
                android:src="@drawable/arrow_back_24"
                android:tint="@color/dark_gray" />
        </RelativeLayout>


    </Toolbar>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/logo_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/book_detail_shape"
            app:layout_constraintTop_toBottomOf="@id/toolbar">


            <com.joooonho.SelectableRoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/book_img"
                android:layout_width="92dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:scaleType="centerCrop"
                app:sriv_left_bottom_corner_radius="10dip"
                app:sriv_left_top_corner_radius="10dip"
                app:sriv_right_bottom_corner_radius="10dip"
                app:sriv_right_top_corner_radius="10dip" />


            <LinearLayout
                android:id="@+id/btn_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/book_img"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/button_shape"
                    android:backgroundTint="@color/logo_color"
                    android:padding="10dp"
                    android:text="افزودن به کتابخانه"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/brief_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/button_shape"
                    android:backgroundTint="@color/light_gray"
                    android:padding="10dp"
                    android:text="نیم نگاه"
                    android:textColor="@color/white" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_layout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:gravity="end"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/btn_layout"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="end"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/title_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ir_sans_family"
                        android:textColor="@color/dark_gray"
                        android:textSize="10dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/classified_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ir_sans_family"
                        android:textColor="@color/dark_gray"
                        android:textSize="10dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/author_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ir_sans_family"
                        android:textColor="@color/dark_gray"
                        android:textSize="10dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/pages_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ir_sans_family"
                        android:textColor="@color/dark_gray"
                        android:textSize="10dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="end"
                    app:constraint_referenced_ids="info_layout" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/btn_layout"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="end"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ir_sans_family"
                        android:text="@string/book_title"
                        android:textColor="@color/dark_gray"
                        android:textSize="10dp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ir_sans_family"
                        android:text="@string/book_classified"
                        android:textColor="@color/dark_gray"
                        android:textSize="10dp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ir_sans_family"
                        android:text="@string/book_author"
                        android:textColor="@color/dark_gray"
                        android:textSize="10dp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ir_sans_family"
                        android:text="@string/book_pages"
                        android:textColor="@color/dark_gray"
                        android:textSize="10dp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/exam_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_layout"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/exam_btn"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="@drawable/circle_shape"
                        android:backgroundTint="#DCDBDB"
                        android:src="@drawable/exam"
                        android:tint="@color/purple_500" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_question_exam"
                        android:textColor="@color/purple_500"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/result_btn"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="@drawable/circle_shape"
                        android:backgroundTint="#DCDBDB"
                        android:src="@drawable/result"
                        android:tint="@color/red" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer"
                        android:textColor="@color/red"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_below="@id/exam_layout"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@color/light_gray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/ir_sans_family"
                android:justificationMode="inter_word"
                android:textColor="@color/dark_gray"
                android:textDirection="rtl"
                android:textSize="10dp" />


        </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>